--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,4 @@
-spring.datasource.url=jdbc:h2:file:/data/demo
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+spring.data.mongodb.uri=mongodb+srv://root:<root>@cluster0.000mj.mongodb.net/<database>?retryWrites=true&w=majority&appName=Cluster0
+
+
+
